Bug 796406: update for new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109699 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/mozorg/contribute.lang
+++ b/nl/mozorg/contribute.lang
@@ -7,7 +7,7 @@ Deze video vereist een browser met ondersteuning voor open video of de <a href="
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-U hoeft geen C++-goeroe te zijn (of zelfs te weten wat dat is!) om mee te helpen.<br><b>U hoeft alleen van het web te houden.</b>
+U hoeft geen C++-goeroe te zijn (of zelfs te weten wat dat is!) om mee te doen.<br><b>U hoeft alleen van het web te houden.</b>
 
 
 ;Please enter a valid email address.
@@ -87,7 +87,8 @@ Gebruikers helpen
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interesse in het helpen van anderen om ze het meeste uit Firefox en andere Mozilla-projecten te halen? Ons ondersteuningsproces is afhankelijk van enthousiaste medewerkers zoals u.
+Interesse in het helpen van anderen om ze het meeste uit Firefox en andere Mozilla-projecten te laten halen? Ons ondersteuningsproces is afhankelijk van enthousiaste medewerkers zoals u.
+
 
 
 ;Quality Assurance
@@ -95,7 +96,7 @@ Kwaliteitscontrole
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Het testen voor kwaliteitscontrole is een van de makkelijkste manieren om met Mozilla te aan de slag te gaan en een goede manier om met onze code en hulpmiddelen vertrouwd te raken.
+Het testen voor kwaliteitscontrole is een van de makkelijkste manieren om met Mozilla aan de slag te gaan en een goede manier om met onze code en hulpmiddelen vertrouwd te raken.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
@@ -119,7 +120,7 @@ Zegt het voort
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help ons bekend te maken hoe Firefox en andere Mozilla-projecten voor een beter internet zorgen. Deel Firefox met de wereld door <a href="https://affiliates.mozilla.org">een partner te worden</a> en bekijk daarna onze <a href="https://wiki.mozilla.org/MarketingGuide">Marketinggids</a> voor meer manieren om betrokken te raken.
+Help ons bekend te maken hoe Firefox en andere Mozilla-projecten voor een beter internet zorgen. Deel Firefox met de wereld door <a href="https://affiliates.mozilla.org">een partner te worden</a> en bekijk daarna onze <a href="https://wiki.mozilla.org/MarketingGuide">Marketinggids</a> voor meer manieren om mee te doen.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
@@ -155,11 +156,13 @@ Antarctica
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Registreer u voor een wekelijkse nieuwsbrief die vol staat met nieuws over de gemeenschap en mogelijkheden voor vrijwilligers.
+Registreer u voor een wekelijkse nieuwsbrief boordevol nieuws over de gemeenschap en mogelijkheden voor vrijwilligers.
 
 
 ;Thank you!
 Dank u!
+
+
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
@@ -169,69 +172,68 @@ U kunt ook onderdeel worden van ons <a href="https://support.mozilla.org/army-of
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
 Lees meer over het <a href="https://support.mozilla.org/kb/superheroes-wanted">ondersteunen van Firefox</a>- en <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a>-gebruikers.
 
-
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+Interesse in het helpen van anderen om ze het meeste uit Firefox en andere Mozilla-projecten te laten halen? Ons ondersteuningsproces is afhankelijk van enthousiaste medewerkers zoals u. Lees meer over het <a href="%(fx_support_url)s">ondersteunen van Firefox</a>- en <a href="%(tb_support_url)s">Thunderbird</a>-gebruikers. U kunt ook onderdeel worden van ons <a href="%(army_url)s">Army of Awesome</a> door gebruikers te helpen op Twitter.
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+We geloven in de kracht van goed gemaakte en wijdverspreide kunst, en willen ook dat kunstenaars het internet en mensen kunnen bereiken met door Mozilla geïnspireerde ontwerpen. Doe mee met een <a href="%(creative_url)s">Creative Collective-wedstrijd</a> of <a href="%(zazzle_url)s">voeg een T-shirt-ontwerp toe</a> aan onze Community Store.
 
 
 ;Localization
-Localization
+Vertaling
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+Toegankelijkheid betreft het voor iedereen werkend maken van functionaliteiten. Help bij het <a href="%(access_url)s">maken van hulpmiddelen en bronnen voor eindgebruikers van Firefox met beperkingen</a> en het <a href="%(access_wiki)s">beschikbaar maken van webinhoud voor niet-visuele agents</a> zoals schermlezers.
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a href="%(dev_intro_url)s">Ontwikkelaars kunnen Mozilla helpen</a> door nieuwe functies toe te voegen, wat onze technologie kleiner en sneller maakt en ontwikkeling voor anderen vereenvoudigt. Veel ontwikkelaars zijn op <a href="%(irc_url)s">IRC</a> te vinden, dus kom langs en stel vragen voor meer informatie. Onze websites zijn ook <a href="%(webdev_blog)s">open voor webninja’s</a> voor hackdoeleinden.
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+Help ons bekend te maken hoe Firefox en andere Mozilla-projecten voor een beter internet zorgen. Deel Firefox met de wereld door <a href="%(affiliates_url)s">een partner te worden</a> en bekijk daarna onze <a href="%(marketing_url)s">Marketinggids</a> voor meer manieren om mee te doen.
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Het testen voor kwaliteitscontrole is een van de makkelijkste manieren om met Mozilla aan de slag te gaan en een goede manier om met onze code en hulpmiddelen vertrouwd te raken. Help mee bij het <a href="%(qa_bugs_url)s">vinden van bugs</a> in Firefox, <a href="%(qa_web_url)s">testen van Mozilla-websites</a> of lees meer over <a href="http://quality.mozilla.org/">andere testmogelijkheden</a>.
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+Maak deel uit van het onderzoeksteam &ndash; of u nu een <a href="%(survey_url)s">deelnemer aan een komend onderzoek</a> wilt zijn, zelf <a href="%(test_email)s">bruikbaarheidstests wilt uitvoeren</a> of <a href="%(test_pilot)s">Test Pilot-gegevens wilt analyseren</a> &ndash; u bent van harte welkom!
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+Doe mee met Mozilla door Firefox, Thunderbird en andere projecten <a href="%(l10n_url)s">in uw taal beschikbaar</a> te maken. Help ons ook bekend te maken hoe Mozilla voor een beter internet zorgt door <a href="%(l10n_web_url)s">inhoud op onze websites te vertalen</a>.
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Het Mozilla Developer Network is de hub voor informatie over Mozilla-technologieën. Help bij het <a href="%(dev_url)s">verbeteren van onze documentatie</a> door het schrijven van nieuwe inhoud, verbeteren van bestaand materiaal of vertalen van inhoud naar nieuwe talen.
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+Help bij het bouwen van een generatie webmakers &ndash; mensen bewegen tot het maken in plaats van gebruiken van het web &ndash; door anderen te leren programmeren en hoe het internet werkt. <a href="%(moz_webmaker)s ">Ontdek wat het Mozilla Webmaker-project inhoudt</a> of begin met het onderwijzen van anderen door <a href="%(webmaker)s">meteen een evenement in uw gemeenschap te organiseren</a>.
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox en andere Mozilla-gebaseerde toepassingen bevatten een krachtig extensiesysteem waarmee u kleine tweaks of grote toevoegingen aan uw programma’s kunt aanbrengen. Als deze technologie nieuw voor u is, lees dan hoe u <a href="%(addons_url)s">een add-on kunt bouwen</a>. Ervaren ontwikkelaars kunnen lezen hoe ze <a href="%(addons_wiki)s">een AMO-editor kunnen worden</a>.
 
 
 ;Area of interest?
-Area of interest?
+Interessegebied?
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+Ik heb hulp nodig bij een Firefox-probleem
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+Er is een fout opgetreden in ons systeem. Probeer het later nog eens.
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+Ik heb een suggestie voor Firefox
 
 
 ;Facebook
@@ -239,7 +241,7 @@ Facebook
 
 
 ;Education
-Education
+Onderwijs
 
 
 ;Firefox Affiliates
@@ -247,7 +249,7 @@ Firefox Affiliates
 
 
 ;Developer Documentation
-Developer Documentation
+Ontwikkelaarsdocumentatie
 
 
 ;Mozilla
@@ -255,7 +257,7 @@ Mozilla
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+Bedankt voor het registreren!
 
 
 ;Menu
@@ -263,19 +265,19 @@ Menu
 
 
 ;Web Development
-Web Development
+Webontwikkeling
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+U moet akkoord gaan met het privacybeleid
 
 
 ;Visual Design
-Visual Design
+Visueel ontwerp
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+Ik ga akkoord met het gebruik van deze gegevens, zoals uitgelegd in uw <a href="%s">privacybeleid</a>
 
 
 ;Twitter
@@ -283,11 +285,11 @@ Twitter
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+Het spijt ons, maar er is een probleem met ons systeem. Probeer het later nog eens!
 
 
 ;Other
-Other
+Anders
 
 
 ;Marketing
@@ -295,6 +297,4 @@ Marketing
 
 
 ;Testing and QA
-Testing and QA
-
-
+Testen en QA
