updates main.lang for Catalan (ca)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109703 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/main.lang
+++ b/ca/main.lang
@@ -412,22 +412,21 @@ Novetats
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
-;Privacy
+;Priva
 Privadesa
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Parts d'aquests continguts són ©1998–%(current_year)s de col·laboradors de mozilla.org. Continguts disponibles sota una <a href="%(url)s">llicència Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
-
+Col·laboreu amb aquesta pàgina
 
 # Top menu item
 ;Mission
-Mission
+Missió
 
 
