--- a/ar/main.lang
+++ b/ar/main.lang
@@ -418,16 +418,16 @@
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+حقوق بعض هذا المحتوى محفوظة لمساهمي موزيلا ©1998–%(current_year)s. المحتوى مرخص وفق <a href="%(url)s">رخصة المشاع الإبداعي</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+ساهم في هذه الصفحة
 
 
 # Top menu item
 ;Mission
-Mission
+المهمة
 
 
