--- a/nl/mozorg/contribute.lang
+++ b/nl/mozorg/contribute.lang
@@ -1,5 +1,5 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Meehelpen: mogelijkheden voor vrijwilligers bij Mozilla
+Meewerken: mogelijkheden voor vrijwilligers bij Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
@@ -128,7 +128,7 @@ Informatie over <a href="/contribute/areas.html">meer interessegebieden…</a>
 
 
 ;map
-map
+map {ok}
 
 
 ;US and Canada
@@ -152,7 +152,7 @@ Azië en Zuid-Pacifisch gebied
 
 
 ;Antarctica
-Antarctica
+Antarctica {ok}
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
@@ -181,7 +181,7 @@ We geloven in de kracht van goed gemaakte en wijdverspreide kunst, en willen ook
 
 
 ;Localization
-Vertaling
+Lokalisatie
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
@@ -237,7 +237,7 @@ Ik heb een suggestie voor Firefox
 
 
 ;Facebook
-Facebook
+Facebook {ok}
 
 
 ;Education
@@ -245,15 +245,15 @@ Onderwijs
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Firefox Affiliates {ok}
 
 
 ;Developer Documentation
-Ontwikkelaarsdocumentatie
+Ontwikkelaars-documentatie
 
 
 ;Mozilla
-Mozilla
+Mozilla {ok}
 
 
 ;Thank you for signing up!
@@ -261,7 +261,7 @@ Bedankt voor het registreren!
 
 
 ;Menu
-Menu
+Menu {ok}
 
 
 ;Web Development
@@ -281,7 +281,7 @@ Ik ga akkoord met het gebruik van deze gegevens, zoals uitgelegd in uw <a href="
 
 
 ;Twitter
-Twitter
+Twitter {ok}
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
@@ -293,7 +293,7 @@ Anders
 
 
 ;Marketing
-Marketing
+Marketing {ok}
 
 
 ;Testing and QA
