Updated translation of contribute.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109745 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/mozorg/contribute.lang
+++ b/hr/mozorg/contribute.lang
@@ -163,7 +163,7 @@ Hvala vam!
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-Također se možete pridružiti našoj <a href="https://support.mozilla.org/army-of-awesome">vojski fenomenalnih</a> na način da pomažete korisnicima na Twitteru.
+Također se možete pridružiti našoj <a href="https://support.mozilla.org/army-of-awesome">vojsci fenomenalnih</a> na način da pomažete korisnicima na Twitteru.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
@@ -171,67 +171,67 @@ Saznajte više o podršci za korisnike <a href="https://support.mozilla.org/kb/s
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+Želite li pomoći drugima da iskoriste potpuni potencijal Firefoxa i ostalih Mozillinih projekata? Proces naše podrške se ostanja na entuzijastične doprinositelje poput vas. Saznajte više o podršci za korisnike <a href="%(fx_support_url)s">Firefoxa</a> i <a href="%(tb_support_url)s">Thunderbirda</a>. Također se možete pridrušiti našoj <a href="%(army_url)s">vojsci fenomenalnih</a> na način da pomažete korisnicima na Twitteru.
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+Mi vjerujemo u snagu dobre i široko distribuirane umjetnosti, stoga autorima dizajna inspiriranog od Mozille želimo omogućiti širenje njihovih radova na webu, ali i ljudima. Sudjelujte u <a href="%(creative_url)s">Creative Collective izazovu</a> ili <a href="%(zazzle_url)s">dodajte svoj dizajn majice</a> u našu trgovinu zajednice.
 
 
 ;Localization
-Localization
+Lokalizacija
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+Pristupačnost se temelji na stvaranju stvari koje odgovaraju svima. Pomognite <a href="%(access_url)s">stvoriti alate i resurse za Firefoxove korisnike s invaliditetom</a> i pomognite <a href="%(access_wiki)s">stvoriti web sadržaj koji je dostupan agentima koji nisu vizalni</a>, poput čitačima zaslona.
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a href="%(dev_intro_url)s">Programeri mogu pomoći</a> Mozilli dodavanjem novih mogućnosti, unaprijeđivanjem naše tehnologije, te olakšavanjem razvojnog procesa ostalim programerima. Mnoge programere možete pronaći na <a href="%(irc_url)s">IRC-u</a>, stoga navratite ako imate pitanja ili želite naučiti nešto novo. Naše web stranice su <a href="%(webdev_blog)s">otvorene za web nindže</a> koje vole hackirati.
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+Pomognite nam proširiti riječ kako Firefox i ostali Mozillini projekti grade bolji Internet. Podijelite Firefox sa svijetom tako da postanete <a href="%(affiliates_url)s">Affiliate član</a>, te zatim provjerite naše <a href="%(marketing_url)s">marketinške smjernice</a> da biste saznali na koje se još načine možete uključiti.
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Testiranje osiguranja kvalitete je jedan od najjednostavnijih načina da se uključite u Mozillu. To je, također, i sjajan način da se upoznate s našim kôdom i alatima. Pomognite nam <a href="%(qa_bugs_url)s">otkriti greške</a> u Firefoxu, <a href="%(qa_web_url)s">testirati Mozilline web stranice</a> ili naučiti više o <a href="http://quality.mozilla.org/">ostalim mogućnostima testiranja</a>.
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+Postanite dio istraživačkog tima&mdash;neovisno o tome želite li <a href="%(survey_url)s">sudjelovati u nadolazećem istraživanju</a>, samostalno <a href="%(test_email)s">provesti test upotrebljivosti</a> ili <a href="%(test_pilot)s">analizirati podatke Test pilot projekta</a>&mdash;bilo bi nam drago da nam se pridružite!
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+Uključite se u Mozillu prevođenjem Firefoxa, Thunderbirda i ostalih projekata <a href="%(l10n_url)s">na vaš vlastiti jezik</a>. Također, pomognite nam proširiti riječ kako Mozilla gradi bolji Internet <a href="%(l10n_web_url)s">prevođenjem sadržaja</a> na našim web stranicama.
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Mozilla Developer Network je riznica informacija o Mozillinim tehnologijama. Pomognite <a href="%(dev_url)s">unaprijediti našu dokumentaciju</a> pisanjem novog sadržaja, ispravljanjem postojećih materijala ili prevođenjem sadržaja na nove jezike.
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+Pomognite izgraditi generaciju stvaratelja weba&mdash;premještanjem ljudi s korištenja weba na stvaranje weba&mdash;učenjem ostalih kako programirati i kako web funkcionira. <a href="%(moz_webmaker)s ">Istražite detalje Mozilla Webmaker projekta</a> ili započnite educirati ostale na način da <a href="%(webmaker)s">organizirate događaj u vašoj zajednici</a>.
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox i ostale aplikacije bazirane na Mozilli imaju snažan sustav ekstenzija koje vam omogućavaju stvaranje malih promjena, pa i velikih proširenja za vaše aplikacije. Ako niste upoznati s ovom tehnologijom, saznajte kako možete <a href="%(addons_url)s">stvoriti dodatak</a>. Iskusnim programerima preporučamo da saznaju <a href="%(addons_wiki)s">kako mogu postati AMO urednik</a>.
 
 
 ;Area of interest?
-Area of interest?
+Područje interesa?
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+Trebam pomoć u vezi problema s Firefoxom
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+Došlo je do greške u našem sustavu. Molim pokušajte ponovno.
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+Imam prijedlog za Firefox
 
 
 ;Facebook
@@ -239,62 +239,62 @@ Facebook
 
 
 ;Education
-Education
+Edukacija
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Firefox Affiliate članovi
 
 
 ;Developer Documentation
-Developer Documentation
+Dokumentacija za razvijatelje
 
 
 ;Mozilla
-Mozilla
+Mozilla {ok}
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+Hvala što ste se prijavili!
 
 
 ;Menu
-Menu
+Izbornik
 
 
 ;Web Development
-Web Development
+Razvoj weba
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+Trebate prihvatiti politiku privatnosti
 
 
 ;Visual Design
-Visual Design
+Vizualni dizajn
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+Slažem se s rukovođenjem ovih informacija, kao što je objašnjeno u <a href="%s">politici privatnosti</a>
 
 
 ;Twitter
-Twitter
+Twitter {ok}
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+Žao nam je, ali došlo je do problema u našem sustavu. Molim pokušajte ponovno.
 
 
 ;Other
-Other
+Ostalo
 
 
 ;Marketing
-Marketing
+Marketing {ok}
 
 
 ;Testing and QA
-Testing and QA
+Testiranje i osiguranje kvalitete
 
 
